Fix accordion CSS to show full height of Turmoil board on mobile

--- a/src/styles/player_home.less
+++ b/src/styles/player_home.less
@@ -746,6 +746,7 @@
     }
     .accordion-body {
         padding-left: 40px;
+        max-height: 60rem !important;
     }
 }
 
